[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = []
description = ""
homepage = ""
readme = "README.md"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.82"
borsh = { version = "1.5.1", features = ["derive"] }
bs58 = "0.5.1"
config = "0.14.0"
futures = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
solana-account-decoder = "1.18.12"
solana-client = "1.18.12"
solana-program = "1.18.12"
solana-sdk = "1.18.12"
solana-transaction-status = "1.18.12"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
